[package]
name = "scoped_signal"
version = "0.1.0"
authors = ["Jacob Hughes <j@jacobhughes.me>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Provides a scoped interface to signal handlers that are only active for the lifetime of a given closure"
repository = "https://github.com/exrook/scoped_signal"
homepage = "https://github.com/exrook/scoped_signal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.17"
libc = "0.2.66"
array-macro = "1.0"
